Menambahkan Icon Socmed

--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                 src="https://source.unsplash.com/random/2010x2010" alt="">
 
         </section>
+
+        <section class="footer">
+            <div class="tooltip">Facebook
+                <div class="tooltip"></div>
+                <span class="fa-brands fa-facebook-f"></span>
+            </div>
+        </section>
     </div>
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
@@ -106,10 +113,6 @@
         });
     </script>
 
-    <!-- <section class="footer">
-        <div class="tooltip">Facebook</div>
-        <span class="fab-fa-facebook"></span>
-    </section> -->
 </body>
 
 </html>
