--- a/index.html
+++ b/index.html
@@ -97,12 +97,30 @@
 
         </section>
 
-        <section class="footer">
-            <div class="tooltip">Facebook
-                <div class="tooltip"></div>
-                <span class="fa-brands fa-facebook-f"></span>
-            </div>
-        </section>
+        <div class="wrapper">
+            <section class="footer">
+                <div class="icon facebook">Facebook
+                    <div class="tooltip"></div>
+                    <span class="fa-brands fa-facebook"></span>
+                </div>
+                <div class="icon twitter">Twitter
+                    <div class="tooltip"></div>
+                    <span class="fa-brands fa-twitter"></span>
+                </div>
+                <div class="icon youtube">Youtube
+                    <div class="tooltip"></div>
+                    <span class="fa-brands fa-youtube"></span>
+                </div>
+                <div class="icon intagram">Instagram
+                    <div class="tooltip"></div>
+                    <span><i class="fa-brands fa-instagram"></i></span>
+                </div>
+                <div class="icon whatsapp">Whatsapp
+                    <div class="tooltip"></div>
+                    <span><i class="fa-brands fa-whatsapp"></i></span>
+                </div>
+            </section>
+        </div>
     </div>
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
