--- a/index.html
+++ b/index.html
@@ -97,30 +97,31 @@
 
         </section>
 
-        <div class="wrapper">
-            <section class="footer">
-                <div class="icon facebook">Facebook
-                    <div class="tooltip"></div>
-                    <span class="fa-brands fa-facebook"></span>
+        <section class="socmed">
+            <div class="wrapper">
+                <div class="icon facebook">
+                    <div class="tooltip">Facebook</div>
+                    <span><i class="fa-brands fa-facebook"></i></span>
                 </div>
-                <div class="icon twitter">Twitter
-                    <div class="tooltip"></div>
-                    <span class="fa-brands fa-twitter"></span>
+                <div class="icon twitter">
+                    <div class="tooltip">Twitter</div>
+                    <span><i class="fa-brands fa-twitter"></i></span>
                 </div>
-                <div class="icon youtube">Youtube
-                    <div class="tooltip"></div>
-                    <span class="fa-brands fa-youtube"></span>
+                <div class="icon youtube">
+                    <div class="tooltip">Youtube</div>
+                    <span><i class="fa-brands fa-youtube"></i></span>
                 </div>
-                <div class="icon intagram">Instagram
-                    <div class="tooltip"></div>
+                <div class="icon intagram">
+                    <div class="tooltip">Instagram</div>
                     <span><i class="fa-brands fa-instagram"></i></span>
                 </div>
-                <div class="icon whatsapp">Whatsapp
-                    <div class="tooltip"></div>
+                <div class="icon whatsapp">
+                    <div class="tooltip">Whatsapp</div>
                     <span><i class="fa-brands fa-whatsapp"></i></span>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
+
     </div>
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
