--- a/index.html
+++ b/index.html
@@ -97,30 +97,33 @@
 
         </section>
 
-        <section class="socmed">
-            <div class="wrapper">
-                <div class="icon facebook">
-                    <div class="tooltip">Facebook</div>
-                    <span><i class="fa-brands fa-facebook"></i></span>
+        <div class="marquee">
+            <section class="socmed">
+                <div class="wrapper">
+                    <div class="icon facebook">
+                        <div class="tooltip" href="https://www.instagram.com/tulusfutsal2014/">Facebook</div>
+                        <span><i class="fa-brands fa-facebook"></i></span>
+                    </div>
+                    <div class="icon twitter">
+                        <div class="tooltip">Twitter</div>
+                        <span><i class="fa-brands fa-twitter"></i></span>
+                    </div>
+                    <div class="icon youtube">
+                        <div class="tooltip">Youtube</div>
+                        <span><i class="fa-brands fa-youtube"></i></span>
+                    </div>
+                    <div class="icon instagram">
+                        <div class="tooltip">Instagram</div>
+                        <span><i class="fa-brands fa-instagram"></i></span>
+                    </div>
+                    <div class="icon whatsapp">
+                        <div class="tooltip">Whatsapp</div>
+                        <span><i class="fa-brands fa-whatsapp"></i></span>
+                    </div>
+
                 </div>
-                <div class="icon twitter">
-                    <div class="tooltip">Twitter</div>
-                    <span><i class="fa-brands fa-twitter"></i></span>
-                </div>
-                <div class="icon youtube">
-                    <div class="tooltip">Youtube</div>
-                    <span><i class="fa-brands fa-youtube"></i></span>
-                </div>
-                <div class="icon intagram">
-                    <div class="tooltip">Instagram</div>
-                    <span><i class="fa-brands fa-instagram"></i></span>
-                </div>
-                <div class="icon whatsapp">
-                    <div class="tooltip">Whatsapp</div>
-                    <span><i class="fa-brands fa-whatsapp"></i></span>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
 
     </div>
     <script>
