--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <section class="socmed">
                 <div class="wrapper">
                     <div class="icon facebook">
-                        <div class="tooltip" src="https://www.instagram.com/tulusfutsal2014/">Facebook</div>
+                        <div class="tooltip">Facebook</div>
                         <span><i class="fa-brands fa-facebook"></i></span>
                     </div>
                     <div class="icon twitter">
