--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+
+    <!-- Animate CSS -->
+    <!-- <link rel="stylesheet" href="css/animate.css" />
+
+    <link rel="stylesheet" href="css/style.css"> -->
+
+    <!-- Hover CSS -->
+    <link rel="stylesheet" href="css/hover-min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Tulus Futsal Merch</title>
     <link href=" https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400&display=swap" rel="stylesheet">
@@ -120,11 +131,39 @@
                         <div class="tooltip">Whatsapp</div>
                         <span><i class="fa-brands fa-whatsapp"></i></span>
                     </div>
-
                 </div>
             </section>
         </div>
 
+        <!-- <div class="container py-5 mb-5 ">
+            <div class="row justify-content-center">
+                <div class="col-md-5 col-sm-8 col-10" data-wow-delay="1s" data-wow-duration="6s" data-wow-offset="5">
+                    <h1 class="text-center py-5" id="kontak">Kontak</h1>
+                    <form action="https://formspree.io/f/xjvleboo" method="POST">
+                        <div class="form-group">
+                            <label for="namalengkap"> <span>*</span> Nama Lengkap</label>
+                            <input type="text" class="form-control py-4" id="namalengkap" arial-describedby="namaHelp"
+                                placeholder="Masukan Nama" nama="Nama Lengkap">
+                        </div>
+                        <div class="form-group">
+                            <label for="email"><span>*</span> Alamat Email</label>
+                            <input type="email" class="form-control py-4" id="email" aria-describedby="emailHelp"
+                                placeholder="Masukan Email" name="Alamat Email">
+                        </div>
+                        <div class="form-group">
+                            <label for="pesan"><span>*</span> Pesan</label>
+                            <textarea class="form-control py-4" id="pesan" rows="3" placeholder="Masukan Pesan"
+                                name="pesan"> </textarea>
+                        </div>
+                        <button type="submit" class="btn-primary btn-lg btn-block ">Kirim</button>
+                    </form>
+                </div>
+            </div>
+        </div> -->
+
+        <footer>
+            <p class="text-center">&copy;2022 Anggistwnn, All Right Reserved.</p>
+        </footer>
     </div>
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
