--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css"> -->
 
     <!-- Hover CSS -->
-    <!-- <link rel="stylesheet" href="css/hover-min.css"> -->
+    <link rel="stylesheet" href="css/hover-min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Tulus Futsal Merch</title>
     <link href=" https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400&display=swap" rel="stylesheet">
