menambahkan icon github

--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
                         <div class="tooltip">Whatsapp</div>
                         <span><i class="fa-brands fa-whatsapp"></i></span>
                     </div>
+                    <div class="icon github">
+                        <div class="tooltip">Github</div>
+                        <span><i class="fa-brands fa-github"></i></span>
+                    </div>
                 </div>
             </section>
         </div>
